--- a/front-end/src/component/ProductCard/styles.css
+++ b/front-end/src/component/ProductCard/styles.css
@@ -1,18 +1,87 @@
 .ProductCard {
   align-items: center;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1);
   display: flex;
+  flex-basis: 20%;
   flex-direction: column;
+  overflow: hidden;
+  position: relative;
   width: 300px;
 }
 
-.img-container img {
+.product-price {
+  background: var(--red);
+  border-radius: 5px;
+  box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1);
+  color: white;
+  display: flex;
+  font-weight: 700;
+  gap: 2px;
+  padding: 5px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.img-container {
+  max-height: 200px;
   max-width: 200px;
-  object-fit: contain;
+  padding: 10px;
+}
+
+.img-container img {
+  height: 100%;
+  object-fit: cover;
+  padding: 10px;
   width: 100%;
 }
 
 .info-container {
   align-items: center;
+  background: var(--red);
+  box-shadow: -3px -9px 11px -5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  width: 100%;
+}
+
+.info-container p {
+  color: white;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons input {
+  background: inherit;
+  border: 1px solid var(--yellow);
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  width: 50px;
+}
+
+.buttons button {
+  background: var(--yellow);
+  border: none;
+  border-end-start-radius: 50%;
+  border-start-start-radius: 50%;
+  color: var(--red);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  width: 24px;
+}
+
+.buttons button:last-child {
+  transform: rotate(180deg);
 }
