--- a/front-end/src/component/Header/styles.css
+++ b/front-end/src/component/Header/styles.css
@@ -1,6 +1,47 @@
-.Header {
+.Customer-Header {
+  background: var(--red);
+  box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1);
+  color: var(--yellow);
   display: flex;
-  gap: 5px;
+  font-weight: 700;
   justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.header-item {
+  align-items: center;
+  display: flex;
+  flex-basis: 30%;
+  justify-content: center;
+}
+
+.header-item:last-child {
+  max-width: 200px;
+}
+
+.header-item a {
   padding: 10px;
+  text-align: center;
+  width: 100%;
+}
+
+.header-item a:hover {
+  background-color: var(--yellow);
+  color: var(--red);
+}
+
+.header-item button {
+  background: inherit;
+  border: none;
+  color: inherit;
+  font-size: 16px;
+  font-weight: inherit;
+  height: 100%;
+  width: 100%;
+}
+
+.header-item button:hover {
+  background-color: var(--yellow);
+  color: var(--red);
+  cursor: pointer;
 }
