--- a/front-end/src/component/ProductCard/styles.css
+++ b/front-end/src/component/ProductCard/styles.css
@@ -1,6 +1,7 @@
 .ProductCard {
   align-items: center;
   background: white;
+  border: solid 2px var(--red);
   border-radius: 10px;
   box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1);
   display: flex;
